# Auroracoin

./: .appveyor.yml  .cirrus.yml  .gitignore  .style.yapf  .travis.yml  CONTRIBUTING.md  COPYING  Makefile.am  README.md  autogen.sh  configure.ac
doc/man/: Makefile.am  auroracoin-cli.1  auroracoin-qt.1  auroracoin-tx.1  auroracoin-wallet.1  auroracoind.1
src/: Makefile.am  Makefile.bench.include  Makefile.leveldb.include  Makefile.qt.include  Makefile.qt_locale.include  Makefile.qttest.include  Makefile.test.include  addrdb.cpp  addrdb.h  addressindex.h  addrman.cpp  addrman.h  amount.h  arith_uint256.cpp  arith_uint256.h  attributes.h  auroracoin-cli.cpp  auroracoin-tx-res.tc  auroracoin-tx.cpp  auroracoin-wallet-res.rc  auroracoin-wallet.cpp  auroracoind-res.rc  auroracoind.cpp  banman.cpp  banman.h  base58.cpp  base58.h  bech32.h  bignum.h  blockencodings.cpp  blockencodings.h  blockfilter.cpp  blockfilter.h  bloom.cpp  bloom.h  chain.cpp  chain.h  chainparams.cpp  chainparams.h  chainparamsbase.cpp  (+127 more)
src/bench/: .gitignore  base58.cpp  bech32.cpp  bench.cpp  bench.h  bench_auroracoin.cpp  block_assemble.cpp  ccoins_caching.cpp  chacha20.cpp  chacha_poly_aead.cpp  checkblock.cpp  checkqueue.cpp  coin_selection.cpp  crypto_hash.cpp  data.cpp  data.h  duplicate_inputs.cpp  examples.cpp  mempool_eviction.cpp  poly1305.cpp  rollingbloom.cpp  rpc_blockchain.cpp  rpc_mempool.cpp  util_time.cpp  verify_script.cpp  wallet_balance.cpp
src/compat/: assumptions.h  byteswap.h  endian.h  glibc_sanity.cpp  glibc_sanity_fdelt.cpp  sanity.h
src/consensus/: consensus.h  merkle.cpp  merkle.h  params.h  tx_check.cpp  tx_check.h  tx_verify.cpp  tx_verify.h  validation.h
src/crypto/: aes.cpp  aes.h  chacha20.cpp  chacha20.h  chacha_poly_aead.cpp  chacha_poly_aead.h  common.h  hkdf_sha256_32.cpp  hkdf_sha256_32.h  hmac_sha256.h  hmac_sha512.h  poly1305.cpp  poly1305.h  ripemd160.h  sha1.cpp  sha1.h  sha256.cpp  sha256.h  sha512.cpp  sha512.h  siphash.cpp  siphash.h  skein.cpp
src/index/: base.cpp  base.h  blockfilterindex.cpp  blockfilterindex.h  txindex.cpp  txindex.h
src/interfaces/: README.md  chain.cpp  chain.h  handler.cpp  handler.h  node.cpp  node.h  wallet.cpp  wallet.h
src/leveldb/util/: env_win.cc
src/node/: README.md  coin.cpp  coin.h  coinstats.cpp  coinstats.h  psbt.cpp  psbt.h  transaction.cpp  transaction.h
src/policy/: feerate.cpp  feerate.h  fees.cpp  fees.h  policy.cpp  policy.h  rbf.cpp  rbf.h  settings.cpp  settings.h
src/primitives/: block.cpp  block.h  transaction.h
src/qt/: README.md  addressbookpage.cpp  addressbookpage.h  addresstablemodel.cpp  addresstablemodel.h  askpassphrasedialog.cpp  askpassphrasedialog.h  auroracoin.cpp  auroracoin.h  auroracoin.qrc  auroracoin_locale.qrc  auroracoinaddressvalidator.cpp  auroracoinaddressvalidator.h  auroracoinamountfield.cpp  auroracoinamountfield.h  auroracoingui.cpp  auroracoingui.h  auroracoinstrings.cpp  auroracoinunits.cpp  auroracoinunits.h  bantablemodel.cpp  bantablemodel.h  callback.h  clientmodel.cpp  clientmodel.h  coincontroldialog.cpp  coincontroldialog.h  coincontroltreewidget.h  createwalletdialog.cpp  createwalletdialog.h  csvmodelwriter.h  editaddressdialog.cpp  editaddressdialog.h  guiconstants.h  guiutil.cpp  guiutil.h  intro.cpp  intro.h  macdockiconhandler.h  macdockiconhandler.mm  (+73 more)
src/qt/forms/: coincontroldialog.ui  createwalletdialog.ui  debugwindow.ui  helpmessagedialog.ui  modaloverlay.ui  optionsdialog.ui  overviewpage.ui  receivecoinsdialog.ui  sendcoinsdialog.ui  sendcoinsentry.ui  signverifymessagedialog.ui
src/qt/locale/: auroracoin_en.ts  (+3 more)
src/rpc/: blockchain.cpp  blockchain.h  client.cpp  client.h  mining.cpp  mining.h  misc.cpp  net.cpp  protocol.cpp  protocol.h  rawtransaction.cpp  rawtransaction.h  rawtransaction_util.cpp  rawtransaction_util.h  register.h  request.cpp  request.h  safemode.h  server.cpp  server.h  util.cpp  util.h
src/script/: auroracoinconsensus.cpp  auroracoinconsensus.h  descriptor.cpp  descriptor.h  interpreter.cpp  interpreter.h  ismine.cpp  ismine.h  keyorigin.h  script.cpp  script.h  script_error.h  sigcache.cpp  sigcache.h  sign.cpp  sign.h  signingprovider.cpp  signingprovider.h  standard.cpp  standard.h
src/secp256k1/: .travis.yml  configure.ac  libsecp256k1.pc.in
src/support/: cleanse.cpp  cleanse.h  events.h  lockedpool.cpp  lockedpool.h
src/test/: README.md  addrman_tests.cpp  allocator_tests.cpp  amount_tests.cpp  arith_uint256_tests.cpp  auroracoin-util-test.py  base32_tests.cpp  base58_tests.cpp  base64_tests.cpp  bech32_tests.cpp  bip32_tests.cpp  blockchain_tests.cpp  blockencodings_tests.cpp  blockfilter_index_tests.cpp  blockfilter_tests.cpp  bloom_tests.cpp  bswap_tests.cpp  checkqueue_tests.cpp  coins_tests.cpp  compilerbug_tests.cpp  compress_tests.cpp  crypto_tests.cpp  cuckoocache_tests.cpp  dbwrapper_tests.cpp  denialofservice_tests.cpp  descriptor_tests.cpp  flatfile_tests.cpp  fs_tests.cpp  getarg_tests.cpp  hash_tests.cpp  key_io_tests.cpp  key_properties.cpp  key_tests.cpp  limitedmap_tests.cpp  main.cpp  mempool_tests.cpp  merkle_tests.cpp  merkleblock_tests.cpp  miner_tests.cpp  multisig_tests.cpp  (+45 more)
src/util/: bip32.cpp  bip32.h  bytevectorhash.cpp  bytevectorhash.h  error.cpp  error.h  fees.cpp  fees.h  memory.h  moneystr.cpp  moneystr.h  rbf.cpp  rbf.h  strencodings.cpp  strencodings.h  string.cpp  string.h  system.cpp  system.h  threadnames.cpp  threadnames.h  time.cpp  time.h  translation.h  url.cpp  url.h  validation.cpp  validation.h
src/wallet/: coincontrol.cpp  coincontrol.h  coinselection.cpp  crypter.cpp  crypter.h  db.cpp  db.h  feebumper.cpp  feebumper.h  fees.cpp  fees.h  init.cpp  init.h  ismine.cpp  ismine.h  load.cpp  load.h  psbtwallet.cpp  psbtwallet.h  rpcdump.cpp  rpcwallet.cpp  rpcwallet.h  wallet.cpp  wallet.h  walletdb.cpp  walletdb.h  wallettool.cpp  wallettool.h  walletutil.cpp  walletutil.h
src/zmq/: zmqabstractnotifier.cpp  zmqabstractnotifier.h  zmqconfig.h  zmqnotificationinterface.cpp  zmqnotificationinterface.h  zmqpublishnotifier.cpp  zmqpublishnotifier.h  zmqrpc.cpp  zmqrpc.h
(+442 files in other folders)
