dist_man1_MANS=

if BUILD_AURORACOIND
  dist_man1_MANS+=auroracoind.1
endif

if ENABLE_QT
  dist_man1_MANS+=auroracoin-qt.1
endif

if BUILD_AURORACOIN_CLI
  dist_man1_MANS+=auroracoin-cli.1
endif

if BUILD_AURORACOIN_TX
  dist_man1_MANS+=auroracoin-tx.1
endif

if ENABLE_WALLET
if BUILD_AURORACOIN_WALLET
  dist_man1_MANS+=auroracoin-wallet.1
endif
endif